...
  @override
  Widget build(BuildContext context) {
    final double _width = MediaQuery.of(context).size.width;
    final bool isWide = _width >= 900;
    final bool isVeryWide = _width >= 1200;
    return Scaffold(
      key: const Key('home_scaffold'),
      bottomNavigationBar: isWide
          ? null
          : NavigationBar(
              selectedIndex: _selectedIndex,
              onDestinationSelected: (int index) {
                setState(() {
...
                tabController.animateTo(index);
              },
              destinations: destinations,
            ),
      appBar: AppBar(
        leading: IconButton(
            key: const Key('home_add_button'),
            iconSize: 35.0,
            icon: Icon(Icons.add),
            onPressed: () {
              Navigator.pushNamed(context, "/add_item");
            }),
        actions: <Widget>[
...
